# nexo

./: .dockerignore  .env  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_NOTES.md  ai-overview-project.md  build.rs  cursorrules  features-to-implements.txt  rust_overview.md  scratches.txt  still-to-do.md  test_client.py  test_new_logs.py  test_nexo.sh
.github/workflows/: release.yml
ai-rules/: ai-project.md  overview-project.md  rules-project  rules-react-dashboard  rules-react.md  rules-rust.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vite.config.ts.timestamp-1769719901385-de035773c8144.mjs
dashboard-web/: index.html  package-lock.json  package.json  tsconfig.node.json
dashboard-web/src/: App.tsx
dashboard/src/: App.tsx  index.css
debug/: rust_overview.md
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: architecture.md  deployment.md  introduction.md  pubsub.md  queue.md  quickstart.md  stream.md
features-to-implement/: frametype-to-split-for-request.md
nexo-docs/: package-lock.json  package.json
nexo-docs-hub/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
nexo-docs-hub/src/: App.tsx  index.css
nexo-docs/.vitepress/: config.ts
nexo-docs/guide/: binary.md  deployment.md  introduction.md  pubsub.md  queue.md  quickstart.md  store.md  stream.md
nexo-docs/reference/: sdks.md
scratch/: cheatsheet.rs
scripts/: deploy.sh  memory_check.sh  populate-dashboard.js  release.js
sdk/ts/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
smoke-test/: index.js  package-lock.json  package.json
src/: command.rs  config.rs  dispatcher.rs  lib.rs  main.rs  system_snapshot.rs
src/brokers/: mod.rs  persistency.md
src/dashboard/: README.md  dashboard_pubsub.rs  dashboard_queue.rs  mod.rs  pubsub.rs  queue.rs  server.rs  store.rs  stream.rs  utils.rs
src/debug/: cheatsheet.rs  nexo-design.txt  note.md  test_client.py  (+5 more)
tests/: README.md  benchmark_showcase.rs  pubsub_tests.rs  queue_tests.rs  store_tests.rs  stream_tests.rs
(+270 files in other folders)
