[package]
name = "nexo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
chrono = "0.4"
serde_json = "1.0"
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.8"
rust-embed = "8.9.0"
mime_guess = "2.0.5"

[profile.release]
debug = true
