[package]
name = "nexo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.8"
tower-http = { version = "0.6", features = ["compression-gzip"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"
hashlink = "0.11.0"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
